--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExercisesActivity"></activity>
+        <activity android:name=".ExplanationActivity"></activity>
+        <activity android:name=".ExercisesActivity" />
         <activity android:name=".DetailLessonActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
