--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExplanationActivity"></activity>
-        <activity android:name=".ExercisesActivity" />
-        <activity android:name=".DetailLessonActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".presenter.ExplanationActivity"></activity>
+        <activity android:name=".presenter.ExercisesActivity" />
+        <activity android:name=".presenter.DetailLessonActivity" />
+        <activity android:name=".presenter.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
